fix dark mode in monet page

--- a/assets/css/about-monet-style.css
+++ b/assets/css/about-monet-style.css
@@ -484,7 +484,7 @@ section {
 --------------------------------------------------------------*/
 
 .team {
-  background: #fff;
+  /*background: #fff;*/
   padding: 60px 0;
 }
 .team .member {
